# grove

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: grove.rb
docs/: release-guide.md
docs/plans/: 2026-04-13-grove-design.md  2026-04-13-grove-impl-plan.md
docs/superpowers/plans/: 2026-04-26-branch-presets.md  2026-05-17-gcreate-records.md  2026-05-19-grm-gbranch.md
docs/superpowers/specs/: 2026-04-26-branch-presets-design.md  2026-05-17-gcreate-records-design.md  2026-05-19-grm-design.md
src/: branch_target.rs  gcreate_records.rs  git.rs  i18n.rs  main.rs  ui.rs  workspace.rs
src/commands/: add.rs  branch_delete.rs  code.rs  completion.rs  config.rs  create.rs  delete.rs  gbranch.rs  git_ops.rs  glist.rs  gowork.rs  grm.rs  group.rs  language.rs  list.rs  mod.rs  mov.rs  remove.rs  rename.rs  status.rs  sync.rs  tags.rs  workspace_context.rs  workspace_edit.rs
src/commands/git_ops/: commit_message.rs  formatters.rs
src/config/: mod.rs  models.rs
tests/: cli_test.rs
