[package]
name = "grove"
version = "0.1.0"
edition = "2021"
description = "Multi-project git worktree workspace manager"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
