[package]
name = "grove-cli"
version = "0.3.1"
edition = "2021"
description = "Multi-project git worktree workspace manager"
license = "MIT"
repository = "https://github.com/yauyy/grove"
homepage = "https://github.com/yauyy/grove"
keywords = ["git", "worktree", "workspace", "cli", "multi-repo"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
